--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
 	</head>
 
 	<body>
-		<h1>CJ Pais</h1>
+		<object type="image/svg+xml" data="data/page/title.svg">
+			CJ Pais
+		</object>
+
 		<div id="todo">
 			<p>todo: add basic svg to create the index page</p>
 		</div>
