--- a/index.html
+++ b/index.html
@@ -2,15 +2,18 @@
 	<head>
 		<title>CJ Pais</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="stylesheet" type="text/css" href="data/css/global.css">
 	</head>
 
-	<body>
-		<object type="image/svg+xml" data="data/page/title.svg">
-			CJ Pais
-		</object>
+	<body> 
+		<div class="container">
+			<object type="image/svg+xml" data="data/page/title.svg">
+				CJ Pais
+			</object>
 
-		<div id="todo">
-			<p>todo: add basic svg to create the index page</p>
+			<div id="todo">
+				<p>todo: add basic svg to create the index page</p>
+			</div>
 		</div>
 	</body>
 
