--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
 
 	<body> 
 		<div class="container">
+			<div class="box">a</div>
+			<div class="box">b</div>
+			<div class="box">c</div>
+			<div class="box">d</div>
+			<div>hi</div>
+			<!--
 			<object type="image/svg+xml" data="data/page/title.svg">
 				CJ Pais
 			</object>
@@ -14,6 +20,7 @@
 			<div id="todo">
 				<p>todo: add basic svg to create the index page</p>
 			</div>
+			-->
 		</div>
 	</body>
 
