--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
 
 	<body> 
 		<div class="container">
+			<object type="image/svg+xml" data="data/page/Title.svg">
+				CJ Pais
+			</object>
+			<object type="image/svg+xml" data="data/page/Posts.svg">
+				CJ Pais
+			</object>
+			<object type="image/svg+xml" data="data/page/About.svg">
+				CJ Pais
+			</object>
+
 			<div class="box">a</div>
 			<div class="box">b</div>
 			<div class="box">c</div>
