--- a/index.html
+++ b/index.html
@@ -10,27 +10,13 @@
 			<object type="image/svg+xml" data="data/page/Title.svg">
 				CJ Pais
 			</object>
+      <div></div>
 			<object type="image/svg+xml" data="data/page/Posts.svg">
 				CJ Pais
 			</object>
 			<object type="image/svg+xml" data="data/page/About.svg">
 				CJ Pais
 			</object>
-
-			<div class="box">a</div>
-			<div class="box">b</div>
-			<div class="box">c</div>
-			<div class="box">d</div>
-			<div>hi</div>
-			<!--
-			<object type="image/svg+xml" data="data/page/title.svg">
-				CJ Pais
-			</object>
-
-			<div id="todo">
-				<p>todo: add basic svg to create the index page</p>
-			</div>
-			-->
 		</div>
 	</body>
 
