encapsulate svg in div

--- a/index.html
+++ b/index.html
@@ -7,16 +7,22 @@
 
 	<body> 
 		<div class="container">
-			<object type="image/svg+xml" data="data/page/Title.svg">
-				CJ Pais
-			</object>
+      <div>
+        <object type="image/svg+xml" data="data/page/Title.svg">
+          CJ Pais
+        </object>
+      </div>
       <div></div>
-			<object type="image/svg+xml" data="data/page/Posts.svg">
-				CJ Pais
-			</object>
-			<object type="image/svg+xml" data="data/page/About.svg">
-				CJ Pais
-			</object>
+      <div>
+        <object type="image/svg+xml" data="data/page/Posts.svg">
+          CJ Pais
+        </object>
+      </div>
+      <div>
+        <object type="image/svg+xml" data="data/page/About.svg">
+          CJ Pais
+        </object>
+      </div>
 		</div>
 	</body>
 
