--- a/index.html
+++ b/index.html
@@ -26,6 +26,6 @@
 		</div>
 	</body>
 
-  <script src="data/js/global.js"> </script>
+  <!--<script src="data/js/global.js"> </script>-->
 
 </html>
