update index with temp index for test

--- a/index.html
+++ b/index.html
@@ -15,12 +15,18 @@
       <div></div>
       <div>
         <object type="image/svg+xml" data="data/page/Posts.svg">
-          CJ Pais
+          Posts
         </object>
       </div>
       <div>
         <object type="image/svg+xml" data="data/page/About.svg">
-          CJ Pais
+          About
+        </object>
+      </div>
+
+      <div class="content">
+        <object type="image/svg+xml" data="data/page/TempIdx.svg">
+          Content read into html here if necessary
         </object>
       </div>
 		</div>
