fix content grid issue

--- a/index.html
+++ b/index.html
@@ -7,21 +7,23 @@
 
 	<body> 
 		<div class="container">
-      <div>
-        <object type="image/svg+xml" data="data/page/Title.svg">
-          CJ Pais
-        </object>
-      </div>
-      <div></div>
-      <div>
-        <object type="image/svg+xml" data="data/page/Posts.svg">
-          Posts
-        </object>
-      </div>
-      <div>
-        <object type="image/svg+xml" data="data/page/About.svg">
-          About
-        </object>
+      <div class="header-grid">
+        <div>
+          <object type="image/svg+xml" data="data/page/Title.svg">
+            CJ Pais
+          </object>
+        </div>
+        <div></div>
+        <div>
+          <object type="image/svg+xml" data="data/page/Posts.svg">
+            Posts
+          </object>
+        </div>
+        <div>
+          <object type="image/svg+xml" data="data/page/About.svg">
+            About
+          </object>
+        </div>
       </div>
 
       <div class="content">
