quick check to see if I broke anything

--- a/index.html
+++ b/index.html
@@ -2,38 +2,38 @@
 	<head>
 		<title>CJ Pais</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" type="text/css" href="data/css/global.css">
+		<link rel="stylesheet" type="text/css" href="src/css/global.css">
 	</head>
 
 	<body> 
 		<div class="container">
       <div class="header-grid">
         <div>
-          <object type="image/svg+xml" data="data/page/Title.svg">
+          <object type="image/svg+xml" data="res/svg/header/Title.svg">
             CJ Pais
           </object>
         </div>
         <div></div>
         <div>
-          <object type="image/svg+xml" data="data/page/Posts.svg">
+          <object type="image/svg+xml" data="res/svg/header/Posts.svg">
             Posts
           </object>
         </div>
         <div>
-          <object type="image/svg+xml" data="data/page/About.svg">
+          <object type="image/svg+xml" data="res/svg/header/About.svg">
             About
           </object>
         </div>
       </div>
 
       <div class="content">
-        <object type="image/svg+xml" data="data/page/TempIdx.svg">
+        <object type="image/svg+xml" data="res/svg/page/TempIdx.svg">
           Content read into html here if necessary
         </object>
       </div>
 		</div>
 	</body>
 
-  <script src="data/js/global.js"></script>
+  <script src="src/js/global.js"></script>
 
 </html>
