remove unecessary directory structure

--- a/index.html
+++ b/index.html
@@ -9,25 +9,25 @@
 		<div class="container">
       <div class="header-grid">
         <div>
-          <object type="image/svg+xml" data="res/svg/header/Title.svg">
+          <object type="image/svg+xml" data="res/svg/Title.svg">
             CJ Pais
           </object>
         </div>
         <div></div>
         <div>
-          <object type="image/svg+xml" data="res/svg/header/Posts.svg">
+          <object type="image/svg+xml" data="res/svg/Posts.svg">
             Posts
           </object>
         </div>
         <div>
-          <object type="image/svg+xml" data="res/svg/header/About.svg">
+          <object type="image/svg+xml" data="res/svg/About.svg">
             About
           </object>
         </div>
       </div>
 
       <div class="content">
-        <object type="image/svg+xml" data="res/svg/page/TempIdx.svg">
+        <object type="image/svg+xml" data="res/svg/TempIdx.svg">
           Content read into html here if necessary
         </object>
       </div>
