actually fix page generation. just wrote code to cleanup and support fixing previously

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 </div>
 
       <div class="content">
-  <object type="image/svg+xml" data=index.html>
+  <object type="image/svg+xml" data=res/svg/TempIdx.svg>
     Content read into html here if necessary
   </object>
 </div>
